[package]
name = "vk-parse"
version = "0.2.0"
authors = ["krolli <kroslakma@gmail.com>"]
description = "Vulkan specification parser"
readme = "README.md"
license = "Apache-2.0/MIT"
documentation = "https://docs.rs/vk-parse"
repository = "https://github.com/krolli/vk-parse"
keywords = ["vulkan", "parser"]
categories = ["parser-implementations", "rendering::graphics-api"]

[dependencies]
vkxml = "^0.3"
xml-rs = "^0.8"
serde = "^1.0.34" # requirement dictated by vkxml 0.3
serde_derive = "^1.0.34" # requirement dictated by vkxml 0.3

[dev-dependencies]
ron = "^0.4"
reqwest = "^0.8"

[badges]
