[package]
name = "vk-parse"
version = "0.4.0"
authors = ["Martin Krošlák <kroslakma@gmail.com>"]
description = "Vulkan specification parser"
readme = "README.md"
license = "Apache-2.0/MIT"
documentation = "https://docs.rs/vk-parse"
repository = "https://github.com/krolli/vk-parse"
keywords = ["vulkan", "parser"]
categories = ["parser-implementations", "rendering::graphics-api"]

[dependencies]
vkxml = "^0.3"
xml-rs = "^0.8"
serde = "^1.0.75"
serde_derive = "^1.0.75"

[dev-dependencies]
ron = "^0.4"
reqwest = "^0.8"

# These dependencies would be required to override selection of transitive dependencies if we were
# to compile with minimal dependencies.
# time = "^0.1.34"
# unicase = "^1.1.1"
# semver = "^0.1.20"
# winapi = "^0.2.8"

[badges]
