[package]
name = "ci"
version = "0.1.0"
authors = ["Martin Krošlák <kroslakma@gmail.com>"]

[dependencies]

[dev-dependencies]
minreq = { version = "^2", features = ["https"] }
ron = "^0.4"
serde = "^1.0.75"
serde_derive = "^1.0.75"
khronos-registry-parse = { path = "../khronos-registry-parse", features = ["serialize", "vkxml-convert", "vulkan", "opengl"] }
vkxml = "^0.3"
xml-rs = "^0.8"
