[package]
name = "ci"
version = "0.1.0"
edition = "2015"
authors = ["Martin Krošlák <kroslakma@gmail.com>"]

[dependencies]

[dev-dependencies]
minreq = { version = "^2", features = ["https"] }
ron = "^0.4"
serde = { version = "^1.0.113", features = ["derive"] }
vk-parse = { path = "../vk-parse", features = ["serialize", "vkxml-convert"] }
vkxml = "^0.3"
xml-rs = "^0.8"
